# nsu_evm

./: lab1  lab2
lab1/: Отчет по лабораторной работе №1.docx
lab2/: Отчет по лабораторной работе №2.docx
lab3/: lab3.c  lab3_O0.s  lab3_O1.s  lab3_Ofast.s  Отчет по лабораторной работе №3.docx
lab4/: README.md  lab4_O0.s  lab4_O1.s  lab4_Ofast.s  Отчет по лабораторной работе №4.docx
lab5/: CMakeLists.txt  README.md  lab5.cpp
